# jira-claude-plugin

./: .gitignore  ARCHITECTURE.md  EXTENDING.md  README.md  plugin.json  pyproject.toml
.claude-plugin/: plugin.json
agents/: jira-agent.md
hooks/: hooks.json
jira/: README.md  __init__.py  connector.py  deps.py  main.py  plugin.py  response.py
jira/formatters/: README.md  __init__.py  attachments.py  base.py  boards.py  comments.py  health.py  issue.py  links.py  linktypes.py  priorities.py  projects.py  search.py  show.py  statuses.py  transitions.py  user.py  watchers.py  weblinks.py  worklogs.py
jira/lib/: __init__.py  client.py  config.py  workflow.py
jira/routes/: __init__.py  agile.py  attachments.py  comments.py  components.py  fields.py  filters.py  health.py  help.py  issues.py  links.py  priorities.py  projects.py  search.py  statuses.py  user.py  versions.py  watchers.py  workflow.py  worklogs.py
jira/tools/: README.md  __init__.py  attachments.py  comments.py  components.py  issues.py  links.py  metadata.py  projects.py  search.py  user.py  versions.py  watchers.py  workflow.py  worklogs.py
skills/jira/: SKILL.md  jira  manifest.json
skills/jira-bulk/: SKILL.md
skills/jira-report/: SKILL.md
skills/jira-syntax/: SKILL.md
tests/: conftest.py  mock_jira.py
tests/fixtures/: __init__.py
tests/routes/: conftest.py  helpers.py  test_agile.py  test_attachments.py  test_comments.py  test_components.py  test_fields.py  test_filters.py  test_health.py  test_issues.py  test_links.py  test_priorities.py  test_projects.py  test_search.py  (+7 more)
(+31 files in other folders)
