[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-cli"
version = "3.2.0"
description = "Standalone Jira CLI for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "httpx>=0.25",
    "atlassian-python-api>=3.41",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
jira-server = "jira.main:main"

[tool.hatch.build.targets.wheel]
packages = ["jira"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
